objects/sf_devops__Deploy_Component__c.object
<CustomObject>
    <description>Information about a metadata type and name that was part of a deployment operation</description>
    <fields>
        <fullName>sf_devops__Deployment_Result__c</fullName>
        <description>The deployment we are associated with.</description>
        <label>Deployment Result</label>
        <referenceTo>sf_devops__Deployment_Result__c</referenceTo>
        <relationshipLabel>Deploy Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sf_devops__File_Path__c</fullName>
        <description>The path of this component</description>
        <encryptionScheme>None</encryptionScheme>
        <label>File Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Force_Ignored__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, this component was not allowed to be deployed because of force ignore rules</description>
        <label>Force Ignored</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf_devops__Operation__c</fullName>
        <description>One of ADD, REMOVE or CHANGE that defines what operation was performed on this component.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Operation</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Source_Component__c</fullName>
        <description>The component name (type:name)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source Component</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Deploy Component</label>
    <nameField>
        <displayFormat>DC-{000000}</displayFormat>
        <label>Deploy Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deploy Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>